--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AAA</title>
+    <title>Wish I could’ve gotten 🍆 like this on my bday 😜</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         body {
@@ -57,11 +57,11 @@
     </style>
 </head>
 <body>
-    <div class="video-title">AAA<span aria-label="smile" role="img"></span></div>
+    <div class="video-title">Wish I could’ve gotten 🍆 like this on my bday 😜<span aria-label="smile" role="img"></span></div>
     <div class="video-wrapper">
         <div class="ad-banner-inside" id="ad-inside-video"></div>
-        <video controls poster="AAAA">
-            <source src="https://cdn.videy.co/57xB8HSm1.mp4" type="video/mp4">
+        <video controls poster="https://cdn.aceimg.com/22ff88f70.jpg">
+            <source src="https://cdn.videy.co/tzDroqLj1.mp4" type="video/mp4">
         </video>
         </div>
     <script type="text/javascript">
